--- a/Service.UnitTest/Service.UnitTest.csproj
+++ b/Service.UnitTest/Service.UnitTest.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Services\Service.csproj" />
+    <ProjectReference Include="..\Service\Service.csproj" />
   </ItemGroup>
 
 </Project>
